# 2019

./: compress  data.toml  generate.py  index.html  index_template.html  pyproject.toml  readme.md
CSS/: animate.css  style.css
Scripts/: script.js
