[tool.poetry]
name = "seccom-generator"
version = "0.1.0"
description = "Static site generator for SECCOM events."
authors = ["SECCOM <seccom.ufsc@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.10"
toml = "^0.10.0"
htmlmin = "^0.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
